// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort Component rendering renders correctly with isActive equal false 1`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
>
  <span
    className="places__sorting-caption"
  >
    Sort by
  </span>
  <span
    className="places__sorting-type"
    onClick={[Function]}
    tabIndex={0}
  >
    Popular
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom "
  >
    <li
      className="places__option places__option--active"
      data-sort-type="Popular"
      onClick={[Function]}
      tabIndex={0}
    >
      Popular
    </li>
    <li
      className="places__option "
      data-sort-type="Price: low to high"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: low to high
    </li>
    <li
      className="places__option "
      data-sort-type="Price: high to low"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: high to low
    </li>
    <li
      className="places__option "
      data-sort-type="Top rated first"
      onClick={[Function]}
      tabIndex={0}
    >
      Top rated first
    </li>
  </ul>
</form>
`;

exports[`Sort Component rendering renders correctly with isActive equal true 1`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
>
  <span
    className="places__sorting-caption"
  >
    Sort by
  </span>
  <span
    className="places__sorting-type"
    onClick={[Function]}
    tabIndex={0}
  >
    Popular
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom places__options--opened"
  >
    <li
      className="places__option places__option--active"
      data-sort-type="Popular"
      onClick={[Function]}
      tabIndex={0}
    >
      Popular
    </li>
    <li
      className="places__option "
      data-sort-type="Price: low to high"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: low to high
    </li>
    <li
      className="places__option "
      data-sort-type="Price: high to low"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: high to low
    </li>
    <li
      className="places__option "
      data-sort-type="Top rated first"
      onClick={[Function]}
      tabIndex={0}
    >
      Top rated first
    </li>
  </ul>
</form>
`;
